# onta-oss

./: .env.example  .fullsuite.txt  ARCHITECTURE.md  CLA.md  CONTRIBUTING.md  README.md  ROADMAP.md  package-lock.json  pyproject.toml
.github/workflows/: boundary.yml  catalog-freshness.yml  cla.yml  npm-publish.yml  test.yml
cograph_client/: config.py  obs.py
cograph_client/agent/: conversation_store.py  plan_store.py  (+2 more)
scripts/: check_boundary.sh  check_npm_bundle.sh  decomp_harness.py
tests/: _enrichment_prov_helpers.py  conftest.py  fake_analytics_plugin.py  test_a1_validators.py  test_agent.py  test_agent_conversation.py  test_agent_subscribe.py  test_agent_urls.py  test_analytics.py  test_answer_citations.py  test_answer_run.py  test_api_registry_byok_guard.py  test_api_registry_catalog.py  test_api_registry_catalog_audit.py  test_api_registry_coverage_index.py  test_api_registry_discovery.py  test_api_registry_enrichment.py  test_api_registry_executor.py  test_api_registry_jsonpath.py  test_api_registry_router.py  test_api_registry_routes.py  test_api_registry_secret_leak_guard.py  test_api_registry_secrets.py  test_api_registry_selection.py  test_api_registry_tenant_store.py  test_ask_geo_radius.py  test_ask_ontology_determinism.py  test_ask_predicate_hygiene.py  test_ask_route.py  test_ask_run_manifest_coverage.py  test_attr_meta_companions.py  test_auth_multi_tenant.py  test_batching.py  test_chunker.py  test_clean_policy.py  test_client_auth.py  test_client_error_capture.py  test_client_transport_retry.py  test_closure_shapes.py  test_conflict_policy.py  (+148 more)
(+226 files in other folders)
